--- a/stable/aws-cloudwatch-metrics/templates/daemonset.yaml
+++ b/stable/aws-cloudwatch-metrics/templates/daemonset.yaml
@@ -19,7 +19,10 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-        {{- include "aws-cloudwatch-metrics.statsdConfig" . | nindent 8 }}
+        ports:
+          - containerPort: 8125
+            hostPort: 8125
+            protocol: UDP
         # Please don't change below envs
         env:
         - name: HOST_IP
